# nfv-mano

./: .gitignore  .gitmodules  README.md  bootstrap.sh  cleanup.sh  requirements.txt  setup.cfg  setup.py
src/app/: nfvctl
src/bpf/: Makefile
src/bpf/bpf_common/include/: bpf_lldp_looping.h  bpf_lldp_tlv.h  bpf_mac.h
src/bpf/bpf_lldp_egress/: CMakeLists.txt
src/bpf/bpf_lldp_egress/src/: Makefile  bpf_lldp_egress_kern.c
src/bpf/xdp_lldp_ingress/: CMakeLists.txt  Makefile
src/bpf/xdp_lldp_ingress/src/: Makefile  xdp_lldp_ingress_kern.c  xdp_lldp_ingress_user.c
src/bpf/xdp_lldp_ingress/test/: start_net.py
src/bpf/xdp_lldp_ingress_redirect/: CMakeLists.txt
src/bpf/xdp_lldp_ingress_redirect/src/: Makefile  xdp_lldp_ingress_redirect_kern.c  xdp_lldp_ingress_redirect_user.c
src/bpf/xdp_lldp_ingress_redirect/test/: start_net.py
src/bpf/xdp_pass/: CMakeLists.txt
src/bpf/xdp_pass/src/: Makefile  xdp_pass_kern.c  xdp_pass_user.c
src/bpf/xdp_redirect/: CMakeLists.txt
src/bpf/xdp_redirect/src/: Makefile  xdp_redirect_kern.c  (+1 more)
src/nfv/: version.py
src/nfv/mano/: nfvm.py  nfvo.py  vim.py
src/nfv/monitoring/: lldp.py  probes.py
src/nfv/placement/: algo.py  sfc.py  topo.py
src/nfv/util/: emu.py  shell.py
src/tools/: cleanup-links.py  docker-build.py  docker-flush.py  tell.py
src/vnf/vnf-echo/: Dockerfile  Makefile  requirements.txt
test/api_controller/: haec_controller.py
test/bpf_htons/: Makefile  test_bitfield  test_bitfield.c
test/bpf_netiface/: Makefile  test_get_mac
test/latency_models/: lldp_looping_v1.m  lldp_looping_v3.m  lldp_looping_v5.m
test/mpls_tagging/: mpls_switch.py
test/ovs_nested/: ovsns_create_bridge.sh  simple_switch.py  start-net.sh  stop-net.sh
test/placement_eval/: placement_eval.py
test/unittest/algo/: placement.py
(+47 files in other folders)
